modules/ballerina-core/src/test/resources/samples/parser/invalidSyntax/ResourceWithEmptyReply.bal
package samples.parser.invalidSyntax;

import ballerina.lang.system;

@BasePath ("/samples")
service SampleService {

  @GET
  @Path ("/resource")
  resource sampleResource (message m) {
	reply;
  }
}
